<resources>
    <string name="app_name">GameDB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="string_saved">Saved</string>
    <string name="string_games">Games</string>
    <string name="string_ranking">Ranking</string>
    <string name="string_genres">Genres</string>
    <string name="string_setting">Setting</string>
    <string name="string_feature">Feature</string>
    <string name="string_see_all">See all</string>
    <string name="string_background">Background</string>
    <string name="string_logo">Logo</string>
    <string name="string_order_rating">rating</string>
    <string name="string_popular">Popular games</string>
    <string name="string_platform">Platform</string>
    <string name="string_pc">PC</string>
    <string name="string_follow">Follow</string>
    <string name="string_rating">Rating</string>
    <string name="string_release_date">Release Date</string>
    <string name="string_meta_score">Meta Score</string>
    <string name="string_about">About</string>
    <string name="string_playtime">Average playtime %sh</string>
    <string name="string_updated">Updated</string>
    <string name="string_best_of_the_year">Best of the year</string>
    <string name="string_year">Year</string>
    <string name="string_favourite">Favourite</string>
    <string name="string_delete">Delete</string>
    <string name="string_fragment">Fragment</string>
    <string name="string_notify_update">Notify my saved game</string>
    <string name="string_update_describe">Show notification once your favourite games being updated</string>
    <string name="string_new_describe">Display the random games</string>
    <string name="string_random_game">Show Random Game</string>
    <string name="string_faq_support"><![CDATA[FAQ & Support]]></string>

    <string name="err_no_param_found">No param found</string>
    <string name="err_unexpected_error">Unexpected Error</string>
    <string name="err_no_activiy">Activity error</string>

    <string name="text_pc">pc</string>
    <string name="text_ps">ps</string>
    <string name="text_xbox">xbox</string>
    <string name="text_nintendo">nintendo</string>
    <string name="text_mobile">mobile</string>
    <string name="text_load_success">Load Succeess</string>
    <string name="text_remove_success">Remove Success</string>
    <string name="text_add_success">Add Successfully</string>
    <string name="text_meta_score_point">Metascore: %s</string>
    <string name="text_released_date">Released Date: %s</string>
    <string name="text_genres">Genres: %s</string>
    <string name="text_version_1_00">Version 1.00</string>
    <string name="text_about">About</string>
    <string name="text_FAQSupport"><![CDATA[FAQ & Support]]></string>

    <string name="format_popular_items">Popular items %s</string>
    <string name="format_genres_item">Genres: %s</string>
    <string name="text_Loading">Loading</string>
    <string name="text_save_nothing">You do not save any game yet</string>
    <string name="string_ordering">ordering</string>
    <string name="string_Search">Search</string>
    <string name="string_search_hint">Search for game</string>
    <string name="text_choose_year">Choose year</string>
    <string name="text_no_internet">Please check the internet connection</string>
    <string name="text_exit">Exit</string>
    <string name="string_thread">Setting Thread</string>
    <string name="text_followed">Followed</string>
    <string name="text_new_notify">Recommend game for today</string>
    <string name="text_lets_play">Let\'s play %s</string>
    <string name="text_app_running">App still running. Please go back normally</string>
</resources>
