<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_mine_shaft"
    android:orientation="vertical"
    android:id="@+id/saveFragmentLayout"
    tools:context=".ui.saved.SavedGameFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/stringFavourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/string_favourite"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_40"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/dp_20"
            android:background="@drawable/button_round"
            android:text="@string/string_delete"
            app:layout_constraintBottom_toBottomOf="@id/stringFavourite"
            app:layout_constraintDimensionRatio="5:1.8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/stringFavourite"
            app:layout_constraintWidth_percent="0.3" />

        <TextView
            android:id="@+id/textLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/text_Loading"
            android:textSize="@dimen/sp_20"
            app:layout_constraintBottom_toBottomOf="@id/recyclerSaved"
            app:layout_constraintEnd_toEndOf="@id/recyclerSaved"
            app:layout_constraintStart_toStartOf="@id/recyclerSaved"
            app:layout_constraintTop_toTopOf="@id/recyclerSaved" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerSaved"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp_70"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stringFavourite" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
